--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 01 Digitization/Digitization.pptx
 01 Digitization/Digitization 2.pptx
+06 Connectionless Streaming of Multimedia Content/Connectionless Streaming of Multimedia Content.pptx
