--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 01 Digitization/Digitization 2.pptx
 06 Connectionless Streaming of Multimedia Content/Connectionless Streaming of Multimedia Content.pptx
 07 Connection-Oriented Streaming of Multimedia Content/big_buck_bunny_1080p_h264.mov
+07 Connection-Oriented Streaming of Multimedia Content/big_buck_bunny_480p_h264.mov
