--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 07 Connection-Oriented Streaming of Multimedia Content/big_buck_bunny_480p_h264.mov
 07 Connection-Oriented Streaming of Multimedia Content/Connection-Oriented Streaming of Multimedia Content (Video).pptx
 07 Connection-Oriented Streaming of Multimedia Content/Connection-Oriented Streaming of Multimedia Content.mp4
+*.txt
