--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 07 Connection-Oriented Streaming of Multimedia Content/Connection-Oriented Streaming of Multimedia Content (Video).pptx
 07 Connection-Oriented Streaming of Multimedia Content/Connection-Oriented Streaming of Multimedia Content.mp4
 *.txt
+04 Audio Signal Compression/Audio Signal Compression.pptx
