--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 07 Connection-Oriented Streaming of Multimedia Content/Connection-Oriented Streaming of Multimedia Content.mp4
 *.txt
 04 Audio Signal Compression/Audio Signal Compression.pptx
+05 Multimedia Content Storage and Description/Multimedia Content Storage and Description.pptx
