--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 *.txt
 04 Audio Signal Compression/Audio Signal Compression.pptx
 05 Multimedia Content Storage and Description/Multimedia Content Storage and Description.pptx
+06 Connectionless Streaming of Multimedia Content/big_buck_bunny_480p_h264.mov
