--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 04 Audio Signal Compression/Audio Signal Compression.pptx
 05 Multimedia Content Storage and Description/Multimedia Content Storage and Description.pptx
 06 Connectionless Streaming of Multimedia Content/big_buck_bunny_480p_h264.mov
+06 Connectionless Streaming of Multimedia Content/BigBuckBunny_640x360.m4v
