--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 06 Connectionless Streaming of Multimedia Content/big_buck_bunny_480p_h264.mov
 06 Connectionless Streaming of Multimedia Content/BigBuckBunny_640x360.m4v
 06 Connectionless Streaming of Multimedia Content/Connectionless Streaming of Multimedia Content.mp4
+Backup of AMIPaC.docx
