Update .gitignore to exclude temporary audio files
Added temporary MP3 files from the Audio Signal Compression directory to the .gitignore. This prevents unnecessary tracking of generated or temporary files in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 06 Connectionless Streaming of Multimedia Content/big_buck_bunny_480p_h264.mov
 06 Connectionless Streaming of Multimedia Content/BigBuckBunny_640x360.m4v
 06 Connectionless Streaming of Multimedia Content/Connectionless Streaming of Multimedia Content.mp4
+/04 Audio Signal Compression/tmp/piano-1-77132.mp3
+/04 Audio Signal Compression/tmp/transcoded.mp3
